# vs-NNVISR

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  example.vpy
cmake/: build_standalone.cmake
cmake/Modules/: FindTensorRT.cmake  FindVapourSynth.cmake
docs/: build.md  conda-build.md  install.md  integration.md  models.md  usage.md
include/: config.h  helper.h  inference.h  logging.h  md_view.h  optimize.h  reformat.h  utils.h
include/debug/: reveal.h
layers/impl/: dcn_layer.cu
layers/include/: layers.h
layers/include/internal/: config.h  dcn_layer.h  dcn_layer_impl.h
layers/src/: dcn_layer.cpp  layers.cpp
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.py
src/: inference.cpp  optimize.cpp  reformat.cu  vs-plugin.cpp
utils/: deform_conv2d_helper.py
